<resources>
    <string name="app_name">Cisco_Partner</string>
    <string name="title_activity_cisco_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_emailid">This Email ID is invalid</string>
    <string name="new_user_sign_up"><u>New User? Sign up</u></string>
    <string name="forgot_password"><u>Forgot Password</u></string>


    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_profile">My Profile</string>


    <!-- Menu -->
    <string name="profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="program_csx">Program CSX 3.0</string>
    <string name="tnc"><![CDATA[T&C]]></string>
    <string name="faqs">FAQs</string>
    <string name="notification">Notification</string>
    <string name="sound">Sound</string>
    <string name="settings">Settings</string>
    <string name="changepassword">Change Password</string>
    <string name="contact">Contact</string>
    <string name="logout">Log Out</string>

    <!-- Profile -->
    <string name="title_website">Website:</string>
    <string name="title_partnerownername">Partner Owner Name:</string>
    <string name="title_emailid">Email Id:</string>
    <string name="title_mobile">Mobile:</string>
    <string name="title_phone">Phone:</string>
    <string name="submit">Submit</string>

    <!-- Change Password -->
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password_lable">Forgot Password</string>
    <string name="new_confirm_password_not_match">New Password and Confirm Password does not match</string>

    <string name="select_status">Select Status</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_nominee">Add Nominee</string>

</resources>
