<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/profile_value_margin"
    android:background="@color/white"
    tools:context="cisco.services.xchange.cisco_fragments.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_marginTop="@dimen/profile_value_margin"
            android:layout_marginBottom="@dimen/profile_value_margin"
            android:textColor="@color/profile_header"
            android:textSize="@dimen/text_medium"/>
        <EditText
            android:id="@+id/oldPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_value_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_marginTop="@dimen/profile_value_margin"
            android:layout_marginBottom="@dimen/profile_value_margin"
            android:textColor="@color/profile_header"
            android:textSize="@dimen/text_medium"/>
        <EditText
            android:id="@+id/newPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_value_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_marginTop="@dimen/profile_value_margin"
            android:layout_marginBottom="@dimen/profile_value_margin"
            android:textColor="@color/profile_header"
            android:textSize="@dimen/text_medium"/>
        <EditText
            android:id="@+id/confirmPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_value_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:padding="@dimen/profile_value_margin">
            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_marginRight="@dimen/profile_value_margin"
                android:background="@color/profile_background"
                android:textColor="@color/white"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@color/profile_background"
                android:layout_marginLeft="@dimen/profile_value_margin"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
