<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    tools:context="cisco.services.xchange.cisco_activities.CiscoLoginActivity">

    <!-- Login progress -->


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="82dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/cisco_logo"/>

            <ImageView
                android:layout_width="206dp"
                android:layout_height="113dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/service_xchange"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_username"
                    android:background="@color/edit_text_background"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eightdp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edit_text_height"
                    android:hint="@string/prompt_password"
                    android:background="@color/edit_text_background"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@color/sign_in_button"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
