<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cisco.services.xchange.cisco_activities.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_website"
                android:textColor="@color/profile_header"/>
            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_value_margin"/>
            <EditText
                android:id="@+id/website_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_partnerownername"
                android:textColor="@color/profile_header"/>
            <TextView
                android:id="@+id/partner_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_value_margin"/>
            <EditText
                android:id="@+id/partner_owner_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_emailid"
                android:textColor="@color/profile_header"/>
            <TextView
                android:id="@+id/emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_value_margin"/>
            <EditText
                android:id="@+id/emailid_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_mobile"
                android:textColor="@color/profile_header"/>
            <TextView
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_value_margin"/>
            <EditText
                android:id="@+id/mobile_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_phone"
                android:textColor="@color/profile_header"/>
            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_value_margin"/>
            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/profile_divider"/>
        </LinearLayout>
        <Button
            android:id="@+id/submit"
            android:layout_width="@dimen/submit_width"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/white"
            android:background="@color/profile_background"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
